<resources>
    <string name="app_name">Nagda Admin</string>
    <string name="app_name_ar">نجدة إنقاذ</string>
    <string name="skip">تخطي</string>
    <string name="next">التالي</string>
    <string name="login">تسجيل الدخول</string>
    <string name="biometric_login">تسجيل الدخول باستخدام البصمة</string>
    <string name="password">كلمة السر</string>
    <string name="email">البريد الالكتروني</string>
    <string name="welcome_text">اهلا بك في برنامج نجدة</string>
    <string name="no_account_text">ليس لديك حساب</string>
    <string name="Home">الرئيسية</string>
    <string name="requests">البلاغات</string>
    <string name="profile">الحساب</string>
    <string name="register">تسجيل حساب</string>
    <string name="name">الاسم</string>
    <string name="phone">رقم الهاتف</string>
    <string name="Address">عنوان المنزل</string>
    <string name="family_size">عدد افراد العائلة</string>
    <string name="notes_optional">ملاحظات اضافية (اختياري)</string>
    <string name="notes">ملاحظات اضافية</string>
    <string name="register_here">سجل هنا</string>
    <string name="main">الرئيسية</string>
    <string name="call_when_emergency">⚠️ اضغط في حالة الطوارئ فقط</string>
    <string name="call_police">اتصال بالدفاع المدني (998)</string>
    <string name="safety_measurement">ارشادات السلامة</string>
    <string name="safety_guide_title">ارشادات السلامة</string>
    <string name="in_case_of_fire">في حالة الحريق</string>
    <string name="follow_safety_guide">اتبع هذه الإرشادات لحماية نفسك وعائلتك</string>
    <string name="emergency_numbers">ارقام الطوارئ</string>
    <string name="police_number">الشرطة (999)</string>
    <string name="ambulance_number">الاسعاف (997)</string>
    <string name="civil_defense">الدفاع المدني (998)</string>
    <string name="personal_info">المعلومات الشخصية</string>
    <string name="save">حفظ</string>
    <string name="signOut">تسجيل الخروج</string>
    <string name="family_info">معلومات العائلة</string>
    <string name="personal_profile">الملف الشخصي</string>
    <string name="more">المزيد</string>
    <string name="details">التفاصيل</string>
    <string name="signout_msg">هل أنت متأكد من أنك تريد تسجيل الخروج</string>
    <string name="cancel">إلغاء</string>
    <string name="yes">نعم</string>
    <string name="done">تم</string>
    <string name="rescue_team_msg">فريق الانقاذ ف الطريق اليك</string>
    <string name="request_sent">تم ارسال البلاغ بنجاح</string>
    <string name="view_request">عرض حالة البلاغ</string>
    <string name="select_location">تحديد المكان</string>
    <string name="send_request">أرسال البلاغ</string>
    <string name="request_details">تفاصيل البلاغ (اختياري)</string>
    <string name="change">تغير</string>
    <string name="location">الموقع</string>
    <string name="request_details_title">تفاصيل البلاغ</string>
    <string name="select_request_type">اختر نوع البلاغ</string>
    <string name="Sos_text">زر الاستغاثة</string>
    <string name="add_details">أضف التفاصيل</string>
    <string name="add_location">أضف الموقع</string>
    <string name="request_status">حالة البلاغ</string>
    <string name="back_to_home">العودة للرئيسية</string>
    <string name="cancel_request">إلغاء البلاغ</string>
    <string name="login_admin">تسجيل الدخول الإدارة</string>
    <string name="job_desc">المسمي الوظيفي</string>
    <string name="personal_info_title">معلومات المبلّغ</string>
    <string name="confirm_process">تأكيد الإجراء</string>
    <string name="change_status_question">هل تريد تغيير الحالة إلى</string>
    <string name="confirm">تأكيد</string>
    <string name="recieve_request">استلام البلاغ</string>
    <string name="no_requests">لا توجد بلاغات</string>
</resources>