<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="20dp"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_warning" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notokufi_arabic_semibold"
        android:paddingTop="10dp"
        android:text="@string/signout_msg"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/notokufi_arabic_medium"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/primary"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/notokufi_arabic_medium"
            android:paddingVertical="4dp"
            android:text="@string/yes"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:strokeColor="@color/primary"
            app:strokeWidth="2dp" />
    </LinearLayout>


</LinearLayout>
