<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:src="@drawable/ic_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/login_admin"
        android:fontFamily="@font/notokufi_arabic_semibold"
        android:textColor="@color/primaryText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/phoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:gravity="end"
        android:fontFamily="@font/notokufi_arabic_regular"
        android:inputType="phone"
        android:padding="12dp"
        android:background="@drawable/et_bg"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:fontFamily="@font/notokufi_arabic_regular"
        android:gravity="end"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/et_bg"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEt"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/notokufi_arabic_medium"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:padding="12dp"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="16dp"
        app:cornerRadius="10dp"
        app:backgroundTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEt"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton">

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_text"
            android:fontFamily="@font/notokufi_arabic_medium"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="visible"
            tools:visibility="visible"
            android:layout_marginStart="58dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_here"
            android:fontFamily="@font/notokufi_arabic_medium"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:visibility="visible"
            tools:visibility="visible"
            android:layout_marginEnd="6dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toStartOf="@+id/registerText"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/fingerPrintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/biometric_login"
        android:fontFamily="@font/notokufi_arabic_medium"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerContainer" />

    <androidx.cardview.widget.CardView
        android:id="@+id/fingerprintCard"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="12dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:backgroundTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fingerPrintText">
        <ImageView
            android:id="@+id/googleImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:src="@drawable/ic_fingerprint" />
    </androidx.cardview.widget.CardView>

    <include
        android:visibility="gone"
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/loading_view" />
</androidx.constraintlayout.widget.ConstraintLayout>